fix security page on firefox

--- a/css/launchcircle.css
+++ b/css/launchcircle.css
@@ -1128,22 +1128,22 @@ a.link-icon::after {
     text-align: center;
 }
 /*Responsive + Firefox Fix*/
-@media screen and (max-width: 1000px), screen and (-moz-images-in-menus:0) {
+@media screen and (min--moz-device-pixel-ratio:0), screen and (max-width: 1000px) {
 
     .radial-services .title {
         font-size: 1.3em;
     }
-    @media screen and (-moz-images-in-menus:0) {
+    @media screen and (min--moz-device-pixel-ratio:0) {
         .security .list-view {
             display: block !important;
         }
     }
-    @media screen and (max-width: 768px), screen and (-moz-images-in-menus:0) and (max-width: 768px) {
+    @media  screen and (min--moz-device-pixel-ratio:0) and (max-width: 768px), screen and (max-width: 768px) {
         .radial-services .title {
             font-size: 1em;
         }
     }
-    @media screen and (max-width: 575px), screen and (-moz-images-in-menus:0) {
+    @media screen and (min--moz-device-pixel-ratio:0), screen and (max-width: 575px) {
         .security .list-view .point-wrapper .point {
             position: relative;
             margin: 1em 0;
